# spotify-connect-scrobbler

./: .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
core/src/: config.rs
src/: lib.rs  main.rs  scrobbler.rs  spirc.rs
src/audio_backend/: mod.rs  nil.rs
