[package]
name = "spotify-connect-scrobbler"
version = "0.1.0"
authors = ["David Futcher <david@futcher.io>", "Paul Liétar <paul@lietar.net>"]
build = "build.rs"
license = "MIT"
description = "Spotify server-side Scrobbler"
keywords = ["spotify", "last.fm", "scrobble"]
repository = "https://github.com/bobbo/spotify-connect-scrobbler"
readme = "README.md"

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "spotify-connect-scrobbler"
path = "src/main.rs"
doc = false

[dependencies.librespot-protocol]
path = "protocol"

[dependencies]
base64          = "0.5.0"
bit-set         = "0.4.0"
byteorder       = "1.0"
env_logger      = "0.4.0"
getopts         = "0.2.14"
hyper           = { git = "https://github.com/hyperium/hyper" }
lazy_static     = "0.2.0"
linear-map      = "1.0"
log             = "0.3.5"
num-bigint      = "0.1.35"
num-integer     = "0.1.32"
num-traits      = "0.1.36"
protobuf        = "1.1"
rand            = "0.3.13"
rpassword       = "0.3.0"
rustfm-scrobble = "0.2.1"
rust-crypto     = { git = "https://github.com/awmath/rust-crypto.git", branch = "avx2" }
serde           = "0.9.6"
serde_json      = "0.9.5"
serde_derive    = "0.9.6"
shannon         = "0.2.0"
tempfile        = "2.1"
url             = "1.3"

vorbis          = "0.1.0"
tremor          = { git = "https://github.com/plietar/rust-tremor", optional = true }

mdns            = { git = "https://github.com/plietar/rust-mdns" }

error-chain = { version = "0.9.0", default_features = false }
futures = "0.1.8"
tokio-core = "0.1.2"
tokio-proto = "0.1.0"
tokio-signal = "0.1"
uuid = { version = "0.4", features = ["v4"] }

[build-dependencies]
rand            = "0.3.13"
vergen          = "0.1.0"
protobuf_macros = { git = "https://github.com/plietar/rust-protobuf-macros", features = ["with-syntex"] }

[features]
with-tremor = ["tremor"]

[package.metadata.deb]
maintainer = "nobody"
copyright = "2016 Paul Liétar"
license_file = ["LICENSE", "4"]
depends = "$auto"
extended_description = """\
librespot is an open source client library for Spotify. It enables applications \
to use Spotify's service, without using the official but closed-source \
libspotify. Additionally, it will provide extra features which are not \
available in the official library."""
section = "sound"
priority = "optional"
assets = [
    ["target/release/librespot", "usr/bin/", "755"],
    ["contrib/librespot.service", "lib/systemd/system/", "644"]
]
