[package]
name = "spotify-connect-scrobbler"
version = "0.1.2"
authors = ["David Futcher <david@futcher.io>", "Paul Liétar <paul@lietar.net>"]
build = "build.rs"
license = "MIT"
description = "Spotify server-side Scrobbler"
keywords = ["spotify", "last.fm", "scrobble"]
repository = "https://github.com/bobbo/spotify-connect-scrobbler"
readme = "README.md"

[workspace]

[lib]
name = "librespot"
path = "src/lib.rs"

[[bin]]
name = "spotify-connect-scrobbler"
path = "src/main.rs"
doc = false

[dependencies.librespot-core]
path = "core"
[dependencies.librespot-metadata]
path = "metadata"
[dependencies.librespot-protocol]
path = "protocol"

[dependencies]
env_logger = "0.4.0"
futures = "0.1.8"
getopts = "0.2"
log = "0.3.5"
num-bigint = "0.1.35"
protobuf = "1.1"
rand = "0.3.13"
rpassword = "0.3.0"
rustfm-scrobble = "1"
serde = "0.9.6"
serde_derive = "0.9.6"
serde_json = "0.9.5"
tokio-core = "0.1.2"
tokio-signal = "0.1.2"

[build-dependencies]
protobuf_macros = { git = "https://github.com/plietar/rust-protobuf-macros", features = ["with-syntex"] }
